--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Photo Booth</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial;
+      background: #f8f8f8;
+    }
+    video {
+      width: 300px;
+      border-radius: 12px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    img {
+      width: 300px;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+
+<h2>📸 My Photo Booth</h2>
+<video id="video" autoplay></video><br>
+<button onclick="takePhoto()">ถ่ายรูป</button>
+
+<canvas id="canvas" style="display:none"></canvas>
+<img id="photo">
+
+<script>
+  const video = document.getElementById("video");
+  const canvas = document.getElementById("canvas");
+  const photo = document.getElementById("photo");
+
+  navigator.mediaDevices.getUserMedia({ video: true })
+    .then(stream => video.srcObject = stream);
+
+  function takePhoto() {
+    canvas.width = video.videoWidth;
+    canvas.height = video.videoHeight;
+    const ctx = canvas.getContext("2d");
+    ctx.drawImage(video, 0, 0);
+    photo.src = canvas.toDataURL("image/png");
+  }
+</script>
+
+</body>
+</html>
+
