--- a/index.html
+++ b/index.html
@@ -1,234 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
   <meta charset="UTF-8">
   <title>Photo Booth</title>
   <style>
     body {
-      font-family: Arial;
-      background: #f5f5f5;
       text-align: center;
+      font-family: Arial, sans-serif;
     }
     video {
       width: 300px;
       border-radius: 12px;
+      background: black;
     }
     button {
-      padding: 12px 24px;
+      padding: 12px 20px;
       font-size: 16px;
-      margin: 10px;
-    }
-    #countdown {
-      font-size: 48px;
-      color: #ff4d4d;
-      margin: 10px;
-    }
-    canvas {
-      display: none;
-    }
-    #frame {
-      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-<h2>📸 Korean Photo Booth</h2>
+<h2>Photo Booth (Base)</h2>
 
-<div id="countdown"></div>
-<video id="video" autoplay></video><br>
-
-<button onclick="startBooth()">เริ่มถ่าย</button>
-
-<canvas id="canvas"></canvas>
-
-<div id="frame"></div>
+<video id="video" autoplay playsinline></video><br><br>
+<button onclick="startCamera()">เปิดกล้อง</button>
 
 <script>
-  const frameDiv = document.getElementById("frame");
   const video = document.getElementById("video");
-  const canvas = document.getElementById("canvas");
-  const ctx = canvas.getContext("2d");
-  const countdownEl = document.getElementById("countdown");
-  const frameDiv = document.getElementById("frame");
 
-  navigator.mediaDevices.getUserMedia({ video: true })
-    .then(stream => video.srcObject = stream);
-
-  let photos = [];
-
-  function startBooth() {
-    photos = [];
-    frameDiv.innerHTML = "";
-    takeWithCountdown(4);
+  function startCamera() {
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        video.srcObject = stream;
+      })
+      .catch(err => {
+        alert("เปิดกล้องไม่ได้");
+        console.error(err);
+      });
   }
-
-  function takeWithCountdown(remaining) {
-    if (remaining === 0) {
-      createFrame();
-      return;
-    }
-
-    let count = 3;
-    countdownEl.innerText = count;
-
-    const timer = setInterval(() => {
-      count--;
-      if (count === 0) {
-        clearInterval(timer);
-        countdownEl.innerText = "📸";
-        takePhoto();
-        setTimeout(() => {
-          countdownEl.innerText = "";
-          takeWithCountdown(remaining - 1);
-        }, 800);
-      } else {
-        countdownEl.innerText = count;
-      }
-    }, 1000);
-  }
-
-  function takePhoto() {
-    canvas.width = video.videoWidth;
-    canvas.height = video.videoHeight;
-    ctx.drawImage(video, 0, 0);
-    photos.push(canvas.toDataURL("image/png"));
-  }
-const caption = document.getElementById("captionInput").value || "";
-function createFrame() {
-  frameDiv.innerHTML = "";
-
-  const caption = document.getElementById("captionInput").value || "";
-
-  const frameCanvas = document.createElement("canvas");
-  const fctx = frameCanvas.getContext("2d");
-
-  const padding = 40;
-  const bottomSpace = 80;
-
-  const images = [];
-  let loaded = 0;
-
-  photos.forEach((src, i) => {
-    const img = new Image();
-    img.src = src;
-    img.onload = () => {
-      images[i] = img;
-      loaded++;
-      if (loaded === photos.length) drawFrame();
-    };
-  });
-
-  function drawFrame() {
-    const w = images[0].width;
-    const h = images[0].height;
-
-    frameCanvas.width = w * 2 + padding * 3;
-    frameCanvas.height = h * 2 + padding * 3 + bottomSpace;
-
-    // พื้นหลังขาว
-    fctx.fillStyle = "#ffffff";
-    fctx.fillRect(0, 0, frameCanvas.width, frameCanvas.height);
-
-    // รูป 4 รูป
-    images.forEach((img, i) => {
-      const x = padding + (i % 2) * (w + padding);
-      const y = padding + Math.floor(i / 2) * (h + padding);
-      fctx.drawImage(img, x, y, w, h);
-    });
-
-    // ข้อความใต้รูป
-    fctx.fillStyle = "#000";
-    fctx.font = "28px Arial";
-    fctx.textAlign = "center";
-    fctx.fillText(
-      caption,
-      frameCanvas.width / 2,
-      frameCanvas.height - 30
-    );
-
-    const resultImg = document.createElement("img");
-    resultImg.src = frameCanvas.toDataURL("image/png");
-    resultImg.style.width = "300px";
-    frameDiv.appendChild(resultImg);
-
-    const link = document.createElement("a");
-    link.href = resultImg.src;
-    link.download = "photo-booth.png";
-    link.innerText = "⬇️ ดาวน์โหลดรูป";
-    frameDiv.appendChild(document.createElement("br"));
-    frameDiv.appendChild(link);
-  }
-}
-คุณส่ง
-function createFrame() {
-  if (photos.length < 4) return;
-
-  frameDiv.innerHTML = "";
-
-  const caption = document.getElementById("captionInput").value || "";
-
-  const frameCanvas = document.createElement("canvas");
-  const fctx = frameCanvas.getContext("2d");
-
-  const padding = 30;
-  const bottomSpace = 70;
-
-  const images = [];
-  let loaded = 0;
-
-  photos.forEach((src, i) => {
-    const img = new Image();
-    img.src = src;
-    img.onload = () => {
-      images[i] = img;
-      loaded++;
-      if (loaded === photos.length) draw();
-    };
-  });
-
-  function draw() {
-    const w = images[0].width;
-    const h = images[0].height;
-
-    frameCanvas.width = w * 2 + padding * 3;
-    frameCanvas.height = h * 2 + padding * 3 + bottomSpace;
-
-    // พื้นหลังขาว (กรอบ)
-    fctx.fillStyle = "#fff";
-    fctx.fillRect(0, 0, frameCanvas.width, frameCanvas.height);
-
-    // วาดรูป
-    images.forEach((img, i) => {
-      const x = padding + (i % 2) * (w + padding);
-      const y = padding + Math.floor(i / 2) * (h + padding);
-      fctx.drawImage(img, x, y, w, h);
-    });
-
-    // ข้อความใต้รูป
-    fctx.fillStyle = "#000";
-    fctx.font = "24px Arial";
-    fctx.textAlign = "center";
-    fctx.fillText(
-      caption,
-      frameCanvas.width / 2,
-      frameCanvas.height - 25
-    );
-
-    const result = document.createElement("img");
-    result.src = frameCanvas.toDataURL("image/png");
-    result.style.width = "300px";
-    frameDiv.appendChild(result);
-  }
-}
-
-<br>
-<input 
-  id="captionInput" 
-  type="text" 
-  placeholder="พิมพ์ข้อความใต้รูป..."
-  style="padding:10px; width:260px; font-size:16px; text-align:center;"
 </script>
 
 </body>
 </html>
+ส่งแล้ว
+เขียนถึง
