--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     fctx.font = "24px Arial";
     fctx.textAlign = "center";
     fctx.fillText(
-      "KOREAN PHOTO BOOTH",
+      "Daonuea IN China",
       frameCanvas.width / 2,
       frameCanvas.height - 30
     );
