--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
   const frameDiv = document.getElementById("frame");
   const photosDiv = document.getElementById("photos");
 const frameDiv = document.getElementById("frame");
-const photos = [];
 
 
   navigator.mediaDevices.getUserMedia({ video: true })
@@ -92,11 +91,36 @@ const photos = [];
   }
 
  function takePhoto() {
-  // ❗ ป้องกันกรณีกล้องยังไม่พร้อม
   if (video.videoWidth === 0) {
     alert("กรุณากดเปิดกล้องก่อน");
     return;
   }
+
+  if (photos.length >= 4) return;
+
+  const canvas = document.createElement("canvas");
+  canvas.width = video.videoWidth;
+  canvas.height = video.videoHeight;
+
+  const ctx = canvas.getContext("2d");
+  ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+  const imgData = canvas.toDataURL("image/png");
+  photos.push(imgData);
+
+  // แสดงรูปที่ถ่าย
+  const thumb = document.createElement("img");
+  thumb.src = imgData;
+  thumb.style.width = "70px";
+  thumb.style.margin = "4px";
+  thumb.style.borderRadius = "6px";
+  photosDiv.appendChild(thumb);
+
+  // ครบ 4 รูป → รวมกรอบ
+  if (photos.length === 4) {
+    createFrame();
+  }
+}
 
   if (photos.length >= 4) return;
 
