--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
 <button onclick="startCamera()">เปิดกล้อง</button>
 <button onclick="takePhoto()">ถ่ายรูป</button>
+<button onclick="downloadFrame()">ดาวน์โหลดรูป</button>
 
 <div id="photos"></div>
+<div id="frame"></div>
 
 <script>
   const video = document.getElementById("video");
