--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
       margin: 4px;
       border-radius: 6px;
     }
+    #countdown {
+  font-size: 80px;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  text-shadow: 0 0 10px black;
+}
+    
   </style>
 </head>
 <body>
@@ -30,9 +42,9 @@
 <h2>📸 Camera Safe Mode</h2>
 
 <video id="video" autoplay playsinline></video><br><br>
-
+<div id="countdown">3</div>
 <button onclick="startCamera()">เปิดกล้อง</button>
-<button onclick="takePhoto()">ถ่ายรูป</button>
+<button onclick="startCountdown()">ถ่ายรูป</button>
 <button onclick="downloadFrame()">ดาวน์โหลดรูป</button>
 
 <div id="photos"></div>
@@ -42,6 +54,30 @@
   const video = document.getElementById("video");
   const photosDiv = document.getElementById("photos");
   const photos = [];
+  const countdownEl = document.getElementById("countdown");
+
+function startCountdown() {
+  if (video.videoWidth === 0) {
+    alert("กรุณากดเปิดกล้องก่อน");
+    return;
+  }
+
+  let count = 3;
+  countdownEl.style.display = "block";
+  countdownEl.innerText = count;
+
+  const timer = setInterval(() => {
+    count--;
+    if (count === 0) {
+      clearInterval(timer);
+      countdownEl.style.display = "none";
+      takePhoto(); // 📸 ถ่ายรูปจริง
+    } else {
+      countdownEl.innerText = count;
+    }
+  }, 1000);
+}
+
 
   function startCamera() {
     navigator.mediaDevices.getUserMedia({ video: true })
