--- a/index.html
+++ b/index.html
@@ -58,10 +58,21 @@
   const countdownEl = document.getElementById("countdown");
 
 function startPhotoBooth() {
-  if (video.videoWidth === 0) {
-    alert("กรุณากดเปิดกล้องก่อน");
-    return;
-  }
+  navigator.mediaDevices.getUserMedia({ video: true })
+    .then(stream => {
+      video.srcObject = stream;
+
+      // รอให้กล้องพร้อมก่อนเริ่ม
+      setTimeout(() => {
+        takeWithCountdown();
+      }, 500);
+    })
+    .catch(err => {
+      alert("เปิดกล้องไม่ได้");
+      console.error(err);
+    });
+}
+  
 
   if (photos.length > 0) return; // กันกดซ้ำ
 
