--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <h2>📸 Camera Safe Mode</h2>
 
-<video id="video" autoplay playsinline></video><br><br>
+<video id="video" autoplay playsinline></video>
 <div id="countdown">3</div>
 <button onclick="startCamera()">เปิดกล้อง</button>
 <button onclick="startPhotoBooth()">ถ่ายรูป</button>
