--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function startPhotoBooth() {
       countdownEl.style.display = "none";
 
 function takePhoto() {
-  if (photos.length >= 4) return;
+  if (photos.length >= 4) 
 
   const canvas = document.createElement("canvas");
   canvas.width = video.videoWidth;
