--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function startPhotoBooth() {
   
   
 
-  if (photos.length > 0) return; // กันกดซ้ำ
+  if (photos.length > 0)  // กันกดซ้ำ
 
   takeWithCountdown();
 }
