--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
   const photosDiv = document.getElementById("photos");
   const photos = [];
   const countdownEl = document.getElementById("countdown");
+  <script>
+  const video = document.getElementById("video");
+
+function startCamera() {
+  navigator.mediaDevices.getUserMedia({ video: true })
+    .then(stream => {
+      video.srcObject = stream;
+      video.onloadedmetadata = () => {
+        video.play();
+      };
+    })
+    .catch(err => {
+      alert("เปิดกล้องไม่ได้");
+      console.error(err);
+    });
+}
+</script>
 
 function startPhotoBooth() {
   navigator.mediaDevices.getUserMedia({ video: true })
