--- a/index.html
+++ b/index.html
@@ -57,7 +57,19 @@
   const photos = [];
   const countdownEl = document.getElementById("countdown");
   const video = document.getElementById("video");
-
+function startCamera() {
+  navigator.mediaDevices.getUserMedia({ video: true })
+    .then(stream => {
+      video.srcObject = stream;
+      video.onloadedmetadata = () => {
+        video.play();
+      };
+    })
+    .catch(err => {
+      alert("เปิดกล้องไม่ได้");
+      console.error(err);
+    });
+}
 
 function startPhotoBooth() {
   navigator.mediaDevices.getUserMedia({ video: true })
