--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       // กรอบขาว
       fctx.fillStyle = "#ffffff";
-      fctx.fillRect(0, 0, frameCanvas.width, frameCanvas.height);
+      fctx.fillRect(x, y, frameCanvas.width, frameCanvas.height);
 
       // รูป 4 รูป
       images.forEach((img, i) => {
