--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>Korean Photo Booth</title>
+  <title>MILKBOX BY IG MARKENZ9</title>
   <style>
     body {
       text-align: center;
