--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>MILKBOX BY IG MARKENZ9</title>
+  <title>MILKBOX</title>
   <style>
     body {
       text-align: center;
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-<h2>📸 Korean Photo Booth</h2>
+<h2>📸 MILKBOX BY IG MARKENZ9 </h2>
 
 <video id="video" autoplay playsinline></video><br><br>
 
@@ -124,7 +124,7 @@
 
       // กรอบขาว
       fctx.fillStyle = "#ffffff";
-      fctx.fillRect(x, y, frameCanvas.width, frameCanvas.height);
+      fctx.fillRect(0, 0, frameCanvas.width, frameCanvas.height);
 
       // รูป 4 รูป
       images.forEach((img, i) => {
