--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       width: 280px;
       border-radius: 12px;
       background: black;
+      transform: scaleX(-1);
     }
     button {
       padding: 10px 18px;
