--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       border-radius: 20px; overflow: hidden; box-shadow: 0 15px 40px rgba(0,0,0,0.1);
       background: #000; aspect-ratio: 3/4;
     }
-    video { width: 100%; height: 100%; object-fit: cover;  }
+    video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
 
     /* Controls */
     .control-group {
@@ -149,7 +149,7 @@
 
     /* Video Result Area */
     #videoResultArea { display: none; flex-direction: column; align-items: center; margin-top: 30px; width: 100%; max-width: 340px; }
-    #finalVideoPlayer { width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+    #finalVideoPlayer { width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); transform: scaleX(-1); }
 
     .final-actions { display: flex; gap: 10px; margin-top: 15px; margin-bottom: 10px; }
     .action-button {
@@ -496,6 +496,7 @@
     const ctx = canvas.getContext("2d");
     
     ctx.filter = currentFilter;
+    ctx.translate(canvas.width, 0); ctx.scale(-1, 1);
     ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
     ctx.filter = 'none';
 
